# sat-calculator

./: README.md  pyproject.toml  requirements.txt  setup.cfg
src/calculator/: __main__.py  app.py  operation.py  utils.py
tests/: test_operation.py  test_utils.py
