[metadata]
name = sat-calculator
version = 0.1.0
author = Muhammad Raihan Satrio
description = An ordinary calculator
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = calculator, simple, lite, basic
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src
