[metadata]
name = sat-calculator
version = 0.2.4
author = Muhammad Raihan Satrio
description = An ordinary calculator
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = calculator, simple, lite, basic
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir = 
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    InquirerPy>=0.3.4
    pytest>=7.2.0
    click>=8.1.3


[options.packages.find]
where = src
exclude = 
    tests


[options.entry_points]
console_scripts = 
    calculate = calculator:run
